# miniverse

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.txt  README.md  build.bat  miniverse.sln  miniverse.vcxproj  run.bat
miniverse/Debug/: vc143.idb
miniverse/Debug/miniverse.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  miniverse.lastbuildstate
miniverse/x64/Debug/: miniverse.exe.recipe  miniverse.ilk  vc143.idb
miniverse/x64/Debug/miniverse.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  miniverse.lastbuildstate
src/: main.cpp
